# aegis-bloom

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-README.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: alice_cookbook_check.py  cli_demo.sh
python/aegis/: __init__.py  _version.py  bloom.py  cli.py
tests/: test_basic.py
