[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-bloom"
version = "0.1.0"
description = "Open-source bloom filter toolkit for copyright compliance in AI training"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AEGIS Testing Technologies", email = "support@aegisprove.com"},
]
maintainers = [
    {name = "AEGIS Testing Technologies", email = "support@aegisprove.com"},
]
keywords = [
    "bloom-filter",
    "copyright",
    "compliance", 
    "ai",
    "machine-learning",
    "training-data"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/Aegis-Testing-Technologies/aegis-bloom"
Documentation = "https://aegisprove.com/docs"
Repository = "https://github.com/Aegis-Testing-Technologies/aegis-bloom"
"Bug Tracker" = "https://github.com/Aegis-Testing-Technologies/aegis-bloom/issues"
"Enterprise" = "https://aegisprove.com/enterprise"

[project.scripts]
aegis = "aegis.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v"
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "aegis.aegis_bloom"
ignore_missing_imports = true  # Rust extension module
